Add tests, HTTP playground, and README for EX1

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ dependencies = [
     "aiosqlite>=0.21.0",
     "fastapi>=0.121.2",
     "fastapi-users[sqlalchemy]>=15.0.1",
+    "httpx>=0.28.1",
     "imagekitio>=4.2.0",
+    "pytest>=9.0.1",
     "python-dotenv>=1.2.1",
     "uvicorn[atandard]>=0.38.0",
 ]
