uv add sqlmodel

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,6 @@ dependencies = [
     "imagekitio>=4.2.0",
     "pytest>=9.0.1",
     "python-dotenv>=1.2.1",
+    "sqlmodel>=0.0.27",
     "uvicorn[atandard]>=0.38.0",
 ]
